// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ball > when checked > should have aria-checked=true 1`] = `
<button
  aria-checked="true"
  class="svelte-kyk9bz"
  role="switch"
>
  <div
    class="svelte-kyk9bz"
  />
</button>
`;

exports[`Ball > when not checked > should have aria-checked=false 1`] = `
<button
  aria-checked="false"
  class="svelte-kyk9bz"
  role="switch"
>
  <div
    class="svelte-kyk9bz"
  />
</button>
`;
